--- a/.config/waybar/matugen/matugen-waybar.css
+++ b/.config/waybar/matugen/matugen-waybar.css
@@ -7,108 +7,108 @@
 
 
 /*-----Surface Transparent Background------*/
-@define-color surface-alpha rgba(23, 17, 26, 0.5);
+@define-color surface-alpha rgba(16, 20, 24, 0.5);
 
 /*-----All Colors--------*/
 
-@define-color background #17111a;
+@define-color background #101418;
 
 @define-color error #ffb4ab;
 
 @define-color error_container #93000a;
 
-@define-color inverse_on_surface #352e38;
+@define-color inverse_on_surface #2d3136;
 
-@define-color inverse_primary #911bce;
+@define-color inverse_primary #00629f;
 
-@define-color inverse_surface #ecdeed;
+@define-color inverse_surface #e0e2e9;
 
-@define-color on_background #ecdeed;
+@define-color on_background #e0e2e9;
 
 @define-color on_error #690005;
 
 @define-color on_error_container #ffdad6;
 
-@define-color on_primary #4f0076;
+@define-color on_primary #003355;
 
-@define-color on_primary_container #ffffff;
+@define-color on_primary_container #000000;
 
-@define-color on_primary_fixed #30004a;
+@define-color on_primary_fixed #001d34;
 
-@define-color on_primary_fixed_variant #7100a5;
+@define-color on_primary_fixed_variant #004a79;
 
-@define-color on_secondary #4a1766;
+@define-color on_secondary #15324d;
 
-@define-color on_secondary_container #f6dbff;
+@define-color on_secondary_container #d2e6ff;
 
-@define-color on_secondary_fixed #30004a;
+@define-color on_secondary_fixed #001d34;
 
-@define-color on_secondary_fixed_variant #62307e;
+@define-color on_secondary_fixed_variant #2d4964;
 
-@define-color on_surface #ecdeed;
+@define-color on_surface #e0e2e9;
 
-@define-color on_surface_variant #d2c1d5;
+@define-color on_surface_variant #c0c7d2;
 
-@define-color on_tertiary #432c00;
+@define-color on_tertiary #492900;
 
-@define-color on_tertiary_container #ffffff;
+@define-color on_tertiary_container #000000;
 
-@define-color on_tertiary_fixed #281800;
+@define-color on_tertiary_fixed #2c1600;
 
-@define-color on_tertiary_fixed_variant #604100;
+@define-color on_tertiary_fixed_variant #683c00;
 
-@define-color outline #9b8c9f;
+@define-color outline #8a919c;
 
-@define-color outline_variant #4e4353;
+@define-color outline_variant #404751;
 
-@define-color primary #e6b4ff;
+@define-color primary #9acbff;
 
-@define-color primary_container #9e2fdb;
+@define-color primary_container #4096df;
 
-@define-color primary_fixed #f5d9ff;
+@define-color primary_fixed #d0e4ff;
 
-@define-color primary_fixed_dim #e6b4ff;
+@define-color primary_fixed_dim #9acbff;
 
 @define-color scrim #000000;
 
-@define-color secondary #e6b4ff;
+@define-color secondary #adc9ea;
 
-@define-color secondary_container #653381;
+@define-color secondary_container #304b67;
 
-@define-color secondary_fixed #f5d9ff;
+@define-color secondary_fixed #d0e4ff;
 
-@define-color secondary_fixed_dim #e6b4ff;
+@define-color secondary_fixed_dim #adc9ea;
 
 @define-color shadow #000000;
 
-@define-color source_color #9e2fdb;
+@define-color source_color #2885cd;
 
-@define-color surface #17111a;
+@define-color surface #101418;
 
-@define-color surface_bright #3e3641;
+@define-color surface_bright #36393e;
 
-@define-color surface_container #241d27;
+@define-color surface_container #1c2025;
 
-@define-color surface_container_high #2f2732;
+@define-color surface_container_high #272a2f;
 
-@define-color surface_container_highest #3a323d;
+@define-color surface_container_highest #31353a;
 
-@define-color surface_container_low #201923;
+@define-color surface_container_low #181c20;
 
-@define-color surface_container_lowest #120c15;
+@define-color surface_container_lowest #0b0e13;
 
-@define-color surface_dim #17111a;
+@define-color surface_dim #101418;
 
-@define-color surface_tint #e6b4ff;
+@define-color surface_tint #9acbff;
 
-@define-color surface_variant #4e4353;
+@define-color surface_variant #404751;
 
-@define-color tertiary #f7bd5d;
+@define-color tertiary #ffb86c;
 
-@define-color tertiary_container #8e6100;
+@define-color tertiary_container #cd7f19;
 
-@define-color tertiary_fixed #ffdeae;
+@define-color tertiary_fixed #ffdcbd;
 
-@define-color tertiary_fixed_dim #f7bd5d;
+@define-color tertiary_fixed_dim #ffb86c;
 
 
