--- a/.config/waybar/matugen/matugen-waybar.css
+++ b/.config/waybar/matugen/matugen-waybar.css
@@ -7,108 +7,108 @@
 
 
 /*-----Surface Transparent Background------*/
-@define-color surface-alpha rgba(16, 20, 24, 0.5);
+@define-color surface-alpha rgba(20, 19, 20, 0.5);
 
 /*-----All Colors--------*/
 
-@define-color background #101418;
+@define-color background #141314;
 
 @define-color error #ffb4ab;
 
 @define-color error_container #93000a;
 
-@define-color inverse_on_surface #2d3136;
+@define-color inverse_on_surface #313031;
 
-@define-color inverse_primary #00629f;
+@define-color inverse_primary #625c68;
 
-@define-color inverse_surface #e0e2e9;
+@define-color inverse_surface #e6e1e2;
 
-@define-color on_background #e0e2e9;
+@define-color on_background #e6e1e2;
 
 @define-color on_error #690005;
 
 @define-color on_error_container #ffdad6;
 
-@define-color on_primary #003355;
+@define-color on_primary #332e39;
 
-@define-color on_primary_container #000000;
+@define-color on_primary_container #aba3b1;
 
-@define-color on_primary_fixed #001d34;
+@define-color on_primary_fixed #1e1a24;
 
-@define-color on_primary_fixed_variant #004a79;
+@define-color on_primary_fixed_variant #4a4550;
 
-@define-color on_secondary #15324d;
+@define-color on_secondary #322f34;
 
-@define-color on_secondary_container #d2e6ff;
+@define-color on_secondary_container #e8e2e8;
 
-@define-color on_secondary_fixed #001d34;
+@define-color on_secondary_fixed #1d1b1f;
 
-@define-color on_secondary_fixed_variant #2d4964;
+@define-color on_secondary_fixed_variant #49464b;
 
-@define-color on_surface #e0e2e9;
+@define-color on_surface #e6e1e2;
 
-@define-color on_surface_variant #c0c7d2;
+@define-color on_surface_variant #cac5cb;
 
-@define-color on_tertiary #492900;
+@define-color on_tertiary #333121;
 
-@define-color on_tertiary_container #000000;
+@define-color on_tertiary_container #aba691;
 
-@define-color on_tertiary_fixed #2c1600;
+@define-color on_tertiary_fixed #1e1c0e;
 
-@define-color on_tertiary_fixed_variant #683c00;
+@define-color on_tertiary_fixed_variant #4a4736;
 
-@define-color outline #8a919c;
+@define-color outline #948f95;
 
-@define-color outline_variant #404751;
+@define-color outline_variant #49464b;
 
-@define-color primary #9acbff;
+@define-color primary #ccc4d2;
 
-@define-color primary_container #4096df;
+@define-color primary_container #1d1923;
 
-@define-color primary_fixed #d0e4ff;
+@define-color primary_fixed #e8dfee;
 
-@define-color primary_fixed_dim #9acbff;
+@define-color primary_fixed_dim #ccc4d2;
 
 @define-color scrim #000000;
 
-@define-color secondary #adc9ea;
+@define-color secondary #cac5cb;
 
-@define-color secondary_container #304b67;
+@define-color secondary_container #4b484d;
 
-@define-color secondary_fixed #d0e4ff;
+@define-color secondary_fixed #e7e1e7;
 
-@define-color secondary_fixed_dim #adc9ea;
+@define-color secondary_fixed_dim #cac5cb;
 
 @define-color shadow #000000;
 
-@define-color source_color #2885cd;
+@define-color source_color #1d1923;
 
-@define-color surface #101418;
+@define-color surface #141314;
 
-@define-color surface_bright #36393e;
+@define-color surface_bright #3a393a;
 
-@define-color surface_container #1c2025;
+@define-color surface_container #201f20;
 
-@define-color surface_container_high #272a2f;
+@define-color surface_container_high #2b2a2a;
 
-@define-color surface_container_highest #31353a;
+@define-color surface_container_highest #363435;
 
-@define-color surface_container_low #181c20;
+@define-color surface_container_low #1c1b1c;
 
-@define-color surface_container_lowest #0b0e13;
+@define-color surface_container_lowest #0f0e0f;
 
-@define-color surface_dim #101418;
+@define-color surface_dim #141314;
 
-@define-color surface_tint #9acbff;
+@define-color surface_tint #ccc4d2;
 
-@define-color surface_variant #404751;
+@define-color surface_variant #49464b;
 
-@define-color tertiary #ffb86c;
+@define-color tertiary #ccc7b1;
 
-@define-color tertiary_container #cd7f19;
+@define-color tertiary_container #1d1b0d;
 
-@define-color tertiary_fixed #ffdcbd;
+@define-color tertiary_fixed #e9e3cc;
 
-@define-color tertiary_fixed_dim #ffb86c;
+@define-color tertiary_fixed_dim #ccc7b1;
 
 
