--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,4 +1,5 @@
 @import "/home/falguren/.config/waybar/matugen/matugen-waybar.css";
+
 * {
 	font-family: Google Sans;
 	font-weight: bold;
@@ -67,7 +68,7 @@ window#waybar {
 }
 
 #custom-notifications {
-	color: @tertiary;
+	color: @primary;
 	margin: 0px 2px 0px 8px;
 }
 
