--- a/.config/swaync/matugen/matugen-swaync.css
+++ b/.config/swaync/matugen/matugen-swaync.css
@@ -10,104 +10,104 @@
 
 /*-----All Colors--------*/
 
-@define-color background #101418;
+@define-color background #11140e;
 
 @define-color error #ffb4ab;
 
 @define-color error_container #93000a;
 
-@define-color inverse_on_surface #2d3136;
+@define-color inverse_on_surface #2e312a;
 
-@define-color inverse_primary #00629f;
+@define-color inverse_primary #48672f;
 
-@define-color inverse_surface #e0e2e9;
+@define-color inverse_surface #e2e3d9;
 
-@define-color on_background #e0e2e9;
+@define-color on_background #e2e3d9;
 
 @define-color on_error #690005;
 
 @define-color on_error_container #ffdad6;
 
-@define-color on_primary #003355;
+@define-color on_primary #1b3704;
 
-@define-color on_primary_container #000000;
+@define-color on_primary_container #c9eea7;
 
-@define-color on_primary_fixed #001d34;
+@define-color on_primary_fixed #0c2000;
 
-@define-color on_primary_fixed_variant #004a79;
+@define-color on_primary_fixed_variant #314e19;
 
-@define-color on_secondary #15324d;
+@define-color on_secondary #29341f;
 
-@define-color on_secondary_container #d2e6ff;
+@define-color on_secondary_container #dae7c9;
 
-@define-color on_secondary_fixed #001d34;
+@define-color on_secondary_fixed #141e0c;
 
-@define-color on_secondary_fixed_variant #2d4964;
+@define-color on_secondary_fixed_variant #3f4a34;
 
-@define-color on_surface #e0e2e9;
+@define-color on_surface #e2e3d9;
 
-@define-color on_surface_variant #c0c7d2;
+@define-color on_surface_variant #c4c8ba;
 
-@define-color on_tertiary #492900;
+@define-color on_tertiary #003736;
 
-@define-color on_tertiary_container #000000;
+@define-color on_tertiary_container #bbecea;
 
-@define-color on_tertiary_fixed #2c1600;
+@define-color on_tertiary_fixed #00201f;
 
-@define-color on_tertiary_fixed_variant #683c00;
+@define-color on_tertiary_fixed_variant #1e4e4d;
 
-@define-color outline #8a919c;
+@define-color outline #8e9286;
 
-@define-color outline_variant #404751;
+@define-color outline_variant #44483e;
 
-@define-color primary #9acbff;
+@define-color primary #add18e;
 
-@define-color primary_container #4096df;
+@define-color primary_container #314e19;
 
-@define-color primary_fixed #d0e4ff;
+@define-color primary_fixed #c9eea7;
 
-@define-color primary_fixed_dim #9acbff;
+@define-color primary_fixed_dim #add18e;
 
 @define-color scrim #000000;
 
-@define-color secondary #adc9ea;
+@define-color secondary #becbae;
 
-@define-color secondary_container #304b67;
+@define-color secondary_container #3f4a34;
 
-@define-color secondary_fixed #d0e4ff;
+@define-color secondary_fixed #dae7c9;
 
-@define-color secondary_fixed_dim #adc9ea;
+@define-color secondary_fixed_dim #becbae;
 
 @define-color shadow #000000;
 
-@define-color source_color #2885cd;
+@define-color source_color #2b3820;
 
-@define-color surface #101418;
+@define-color surface #11140e;
 
-@define-color surface_bright #36393e;
+@define-color surface_bright #373a33;
 
-@define-color surface_container #1c2025;
+@define-color surface_container #1e211a;
 
-@define-color surface_container_high #272a2f;
+@define-color surface_container_high #282b24;
 
-@define-color surface_container_highest #31353a;
+@define-color surface_container_highest #33362f;
 
-@define-color surface_container_low #181c20;
+@define-color surface_container_low #1a1d16;
 
-@define-color surface_container_lowest #0b0e13;
+@define-color surface_container_lowest #0c0f09;
 
-@define-color surface_dim #101418;
+@define-color surface_dim #11140e;
 
-@define-color surface_tint #9acbff;
+@define-color surface_tint #add18e;
 
-@define-color surface_variant #404751;
+@define-color surface_variant #44483e;
 
-@define-color tertiary #ffb86c;
+@define-color tertiary #a0cfce;
 
-@define-color tertiary_container #cd7f19;
+@define-color tertiary_container #1e4e4d;
 
-@define-color tertiary_fixed #ffdcbd;
+@define-color tertiary_fixed #bbecea;
 
-@define-color tertiary_fixed_dim #ffb86c;
+@define-color tertiary_fixed_dim #a0cfce;
 
 
