--- a/.config/waybar/matugen/matugen-waybar.css
+++ b/.config/waybar/matugen/matugen-waybar.css
@@ -7,108 +7,108 @@
 
 
 /*-----Surface Transparent Background------*/
-@define-color surface-alpha rgba(20, 19, 20, 0.5);
+@define-color surface-alpha rgba(17, 20, 14, 0.5);
 
 /*-----All Colors--------*/
 
-@define-color background #141314;
+@define-color background #11140e;
 
 @define-color error #ffb4ab;
 
 @define-color error_container #93000a;
 
-@define-color inverse_on_surface #313031;
+@define-color inverse_on_surface #2e312a;
 
-@define-color inverse_primary #625c68;
+@define-color inverse_primary #48672f;
 
-@define-color inverse_surface #e6e1e2;
+@define-color inverse_surface #e2e3d9;
 
-@define-color on_background #e6e1e2;
+@define-color on_background #e2e3d9;
 
 @define-color on_error #690005;
 
 @define-color on_error_container #ffdad6;
 
-@define-color on_primary #332e39;
+@define-color on_primary #1b3704;
 
-@define-color on_primary_container #aba3b1;
+@define-color on_primary_container #c9eea7;
 
-@define-color on_primary_fixed #1e1a24;
+@define-color on_primary_fixed #0c2000;
 
-@define-color on_primary_fixed_variant #4a4550;
+@define-color on_primary_fixed_variant #314e19;
 
-@define-color on_secondary #322f34;
+@define-color on_secondary #29341f;
 
-@define-color on_secondary_container #e8e2e8;
+@define-color on_secondary_container #dae7c9;
 
-@define-color on_secondary_fixed #1d1b1f;
+@define-color on_secondary_fixed #141e0c;
 
-@define-color on_secondary_fixed_variant #49464b;
+@define-color on_secondary_fixed_variant #3f4a34;
 
-@define-color on_surface #e6e1e2;
+@define-color on_surface #e2e3d9;
 
-@define-color on_surface_variant #cac5cb;
+@define-color on_surface_variant #c4c8ba;
 
-@define-color on_tertiary #333121;
+@define-color on_tertiary #003736;
 
-@define-color on_tertiary_container #aba691;
+@define-color on_tertiary_container #bbecea;
 
-@define-color on_tertiary_fixed #1e1c0e;
+@define-color on_tertiary_fixed #00201f;
 
-@define-color on_tertiary_fixed_variant #4a4736;
+@define-color on_tertiary_fixed_variant #1e4e4d;
 
-@define-color outline #948f95;
+@define-color outline #8e9286;
 
-@define-color outline_variant #49464b;
+@define-color outline_variant #44483e;
 
-@define-color primary #ccc4d2;
+@define-color primary #add18e;
 
-@define-color primary_container #1d1923;
+@define-color primary_container #314e19;
 
-@define-color primary_fixed #e8dfee;
+@define-color primary_fixed #c9eea7;
 
-@define-color primary_fixed_dim #ccc4d2;
+@define-color primary_fixed_dim #add18e;
 
 @define-color scrim #000000;
 
-@define-color secondary #cac5cb;
+@define-color secondary #becbae;
 
-@define-color secondary_container #4b484d;
+@define-color secondary_container #3f4a34;
 
-@define-color secondary_fixed #e7e1e7;
+@define-color secondary_fixed #dae7c9;
 
-@define-color secondary_fixed_dim #cac5cb;
+@define-color secondary_fixed_dim #becbae;
 
 @define-color shadow #000000;
 
-@define-color source_color #1d1923;
+@define-color source_color #2b3820;
 
-@define-color surface #141314;
+@define-color surface #11140e;
 
-@define-color surface_bright #3a393a;
+@define-color surface_bright #373a33;
 
-@define-color surface_container #201f20;
+@define-color surface_container #1e211a;
 
-@define-color surface_container_high #2b2a2a;
+@define-color surface_container_high #282b24;
 
-@define-color surface_container_highest #363435;
+@define-color surface_container_highest #33362f;
 
-@define-color surface_container_low #1c1b1c;
+@define-color surface_container_low #1a1d16;
 
-@define-color surface_container_lowest #0f0e0f;
+@define-color surface_container_lowest #0c0f09;
 
-@define-color surface_dim #141314;
+@define-color surface_dim #11140e;
 
-@define-color surface_tint #ccc4d2;
+@define-color surface_tint #add18e;
 
-@define-color surface_variant #49464b;
+@define-color surface_variant #44483e;
 
-@define-color tertiary #ccc7b1;
+@define-color tertiary #a0cfce;
 
-@define-color tertiary_container #1d1b0d;
+@define-color tertiary_container #1e4e4d;
 
-@define-color tertiary_fixed #e9e3cc;
+@define-color tertiary_fixed #bbecea;
 
-@define-color tertiary_fixed_dim #ccc7b1;
+@define-color tertiary_fixed_dim #a0cfce;
 
 
